--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "test": "jest"
   },
+  "jest": {
+    "transform": {".*": "<rootDir>/node_modules/babel-jest"},
+    "testFileExtensions": ["es6", "js"],
+    "moduleFileExtensions": ["js", "json", "es6"],
+    "testEnvironment": "node"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
+    "babel-jest": "^17.0.2",
     "babel-preset-es2015": "^6.18.0",
     "jest": "^17.0.3"
-  },
-  "jest": {
-    "testEnvironment": "node"
   },
   "dependencies": {
     "immutable": "^3.8.1"
