--- a/package.json
+++ b/package.json
@@ -3,23 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "jest": {
-    "transform": {".*": "<rootDir>/node_modules/babel-jest"},
-    "moduleFileExtensions": ["js", "json", "es6"],
-    "testEnvironment": "node"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "test": "mocha --compilers js:babel-core/register --recursive",
+    "test:watch": "npm run test -- --watch"
+  },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
     "babel-jest": "^17.0.2",
     "babel-preset-es2015": "^6.18.0",
-    "jest": "^17.0.3"
+    "chai": "^3.5.0",
+    "chai-immutable": "^1.6.0",
+    "mocha": "^3.2.0"
   },
   "dependencies": {
     "immutable": "^3.8.1"
