--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
+    "start": "babel-node index.js",
     "test": "mocha --compilers js:babel-core/register --recursive",
     "test:watch": "npm run test -- --watch"
   },
