--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "immutable": "^3.8.1",
     "redux": "^3.6.0",
     "socket.io": "^1.7.1"
+  },
+  "babel": {
+    "presets": ["es2015"]
   }
 }
